refactor: no score director in custom phase
# Conflicts:
#	docs/TODO.md